syntax = "proto3";
package book;

service BOOK_SERVICE {
    rpc getAllBooks(BOOK_REQUEST) returns (BOOK_RESPONSE) {};
}

message BOOK_REQUEST {
    string id = 1;
}

message Book { 
    string id = 1;
    string title = 2;
    string author = 3;
}

message BOOK_RESPONSE {
    repeated Book data = 1; 
}